chore: synced npm description with readme on github

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,7 @@
   "compilerOptions": {
     "outDir": "dist",
     "esModuleInterop": true,
+    "declaration": true,
     "target": "es5",
     "module": "commonjs",
     "strict": true,
